--- a/src/app.html
+++ b/src/app.html
@@ -1,8 +1,12 @@
 <template>
 	<lightning-card title="Comp Filhos">
 		<div class="slds-m-around_medium">
-			<c-child></c-child>
-
+			<c-child nome='Opa'></c-child>
+			<c-child nome='Eeeepa'></c-child>
+			<c-child nome='Ihuuu'></c-child>
+			<br/>
+			<c-empresa></c-empresa>
+			<c-produto></c-produto>
 		</div>
 	</lightning-card>
 </template>
