--- a/src/child.html
+++ b/src/child.html
@@ -1,6 +1,19 @@
 <template>
-	<h1 class="slds-text-heading_large">
+	<h1 class="slds-text-heading_medium">
 		Opa sou um componente Filho
 	</h1>
-
+	<p>Nome passado pelos pais: {nome}</p>
 </template>
+<!--
+	crie um componente chamado produto
+	produto.html || produto.js
+
+	produto.html
+	exibir as seguintes informações
+
+	h1 -> produto X
+	p -> preço: R$ X
+
+	produto.js
+	estrutura base de classe
+	-->
