componente produto completo

--- a/src/app.html
+++ b/src/app.html
@@ -5,8 +5,10 @@
 			<c-child nome='Eeeepa'></c-child>
 			<c-child nome='Ihuuu'></c-child>
 			<br/>
-			<c-empresa></c-empresa>
-			<c-produto></c-produto>
+			<c-empresa nome='Empresa showzin' cnpj='0001000010011'></c-empresa>
+			<c-produto produto='carambolas' preco='20.00' ></c-produto>
+			<c-produto produto='caramiolas' preco='50.00'></c-produto>
+			<c-produto produto='caras-pálidas' preco='200.00'></c-produto>
 		</div>
 	</lightning-card>
 </template>
