--- a/src/empresa.html
+++ b/src/empresa.html
@@ -1,6 +1,6 @@
 <template>
-  <h1>Componente Empresa</h1>
-	<p>{nome}</p>
+  <h1 class="slds-text-heading_large">Componente Empresa</h1>
+	<p class="slds-text-heading_medium">{nome}</p>
 	<p>{cnpj}</p>
 
 </template>
